Bug 800947, check the existence of widget only when the event is actually nsGUIEvent, r=bz